--- a/index.html
+++ b/index.html
@@ -8,58 +8,100 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
 
-    <title>Resume by iamsudip</title>
+    <title>iamsudip</title>
   </head>
 
   <body>
 
     <header>
       <div class="container">
-        <h1>Resume</h1>
+        <h1>iamsudip</h1>
         <h2></h2>
 
         <section id="downloads">
           <a href="https://github.com/iamsudip" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+        <section id="downloads">
+          <a href="https://facebook.com/iamsudip13" class="btn btn-github"><span class="icon"></span>View on Facebook</a>
         </section>
       </div>
     </header>
 
     <div class="container">
       <section id="main_content">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+        <h2><span id="personal-info">Personal Information</span></h2>
+        <hr><ul>
+        <li><b>Name</b> : Sudip Maji</li>
+        <li><b>e-mail</b> : <a href="mailto:iamsudip@programmer.net">iamsudip@programmer.net</a>
+        </li>
+        <li><b>Blog</b> : <a href="http://iam-sudip.blogspot.in">http://iam-sudip.blogspot.in</a>
+        </li>
+        <li><b>IRC nick</b> : iamsudip</li>
+        </ul>
+        <h2><span id="about-me">About Me</span></h2>
+        <hr>
+        <p>I am a Pythonista and an open source enthusiast. I love sharing softwares, source code, ideas everything so I love the world of "FOSS". I like to implement my knowledge and learn while working on an exciting opportunity on software design and development.</p>
+        </ul>
+        <h2><span id="education">Education</span></h2>
+        <hr><ul>
+        <li><b>Dr. B.C.Roy Engineering College, Durgapur</b>
+          <p>B.Tech in Computer Science and Technology, Present</p>
+          <p>CGPA 7.44/10 [Till 4th Semester]</p>
+        </li>
+        <li><b>Durgapur A. V. B. High School(H. S.)</b>
+            <p>Secured 81.80% in Higher Secondary Examination, W. B. C. H. S. E, May 2011</p>
+        
+        <li><b>Durgapur A. V. B. High School</b>
+          <p>Secured 85.75% in Madhyamik Pariksha, W. B. B. S. E, May 2009</p>
+        </li>
+        </ul>
+        <h2><span id="technical-skills">Technical Skills</span></h2>
+        <hr><ul>
+        <p><li><b>Operating System:</b> GNU/Linux, Windows</p>
+        </li>
+        <p><li><b>Programming Languages:</b> Python, Java, C, C++, HTML</p>
+        </li>
+        <p><li><b>Frameworks:</b> Python-flask</p>
+        </li>
+        <p><li><b>Version Control System:</b> Git</p>
+        </li>
+        </ul>
+        <h2><span id="projects">Projects</span></h2>
+        <hr><ul>
+        <li><a href="https://github.com/iamsudip/dgplug/tree/master/dup_images"><b>dup_images</b></a>: Application which would find duplicate image or any files in a directory tree.</li>
+        <li><a href="https://github.com/iamsudip/pysub-dl"><b>pysub-dl</b></a> Command line tool to download movie subtitles from subscene - a subscene.com scrapper. </li>
+        <li><a href="https://github.com/iamsudip/sysmon"><b>sysmon</b></a> A daemon system process info collector.</li>
+        <li><a href="https://github.com/iamsudip/bdthankall"><b>bdthankall</b></a> Like and comment programmatically on facebook wall.</li>
+        <li><a href="https://github.com/iamsudip/dgplug"><b>dgplug</b></a> Various python chit-chat code.</li>
+        <li><a href="https://github.com/kushaldas/pym"><b>Python for you and me book</b></a> (upstream contribution)</li>
+        <li><a href="https://github.com/anurag619/music-ls"><b>music-ls</b></a> (upstream contribution)</li>
+        </ul>
+        <h2><span id="activities">Activities</span></h2>
+        <hr><ul>
+        <li>Local member <b>Durgapur Linux User's Group (dgplug).</b></li>
+        <li>Member of organizing team of <b>PYCON-MONTH workshop 2013</b> A hand on workshop on python.</li>
+        </ul>
+       <h2><span id="interests">Interests</span></h2>
+        <hr><ul>
+        <li>Keen Interest in Web Development, Web scraping.</li>
+        <li>Love to play Cricket</li>
+        </ul>
+       <h2><span id="declaration">Declaration</span></h2>
+        <hr><ul>
+        <li>I hereby declare that all the data and information provided above are true and correct to the best of my knowledge and I hold responsible myself for any irregularities, if found.
+        </li>
+        <li>Yours faithfully
+        </li>
+        <li>Sudip Maji
+        </li>
+        <li>Place: Durgapur (West Bengal)
+        </li>
+        </ul>
+       <h2><span id="references">References</span></h2>
+        <hr><ul>
+        <li>Sayan Chowdhury, Lead Developer at HackerEarth, sayan@hackerearth.com
+        </li>
       </section>
     </div>
-
-    
   </body>
 </html>
