--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
       <section id="main_content">
         <h2><span id="personal-info">Personal Information</span></h2>
         <hr><ul>
-        <li><b>Name</b> : Sudip Maji</li>
         <li><b>e-mail</b> : <a href="mailto:iamsudip@programmer.net">iamsudip@programmer.net</a>
         </li>
         <li><b>Blog</b> : <a href="http://iam-sudip.blogspot.in">http://iam-sudip.blogspot.in</a>
@@ -68,10 +67,11 @@
         </ul>
         <h2><span id="projects">Projects</span></h2>
         <hr><ul>
-        <li><a href="https://github.com/iamsudip/dgplug/tree/master/dup_images"><b>dup_images</b></a>: Application which would find duplicate image or any files in a directory tree.</li>
+        <li><a href="https://github.com/iamsudip/dgplug/tree/master/dup_images"><b>dup_images</b></a> Application to find duplicate image or any files in a directory tree.</li>
         <li><a href="https://github.com/iamsudip/pysub-dl"><b>pysub-dl</b></a> Command line tool to download movie subtitles from subscene - a subscene.com scrapper. </li>
         <li><a href="https://github.com/iamsudip/sysmon"><b>sysmon</b></a> A daemon system process info collector.</li>
-        <li><a href="https://github.com/iamsudip/bdthankall"><b>bdthankall</b></a> Like and comment programmatically on facebook wall.</li>
+        <li><a href="https://github.com/iamsudip/bdthankall"><b>bdthankall</b></a> Bulk Like and comment programmatically on facebook.</li>
+        <li><a href="https://github.com/iamsudip/decaptcha"><b>CAPTCHas1</b></a> Flipkart.com captcha solver</li>
         <li><a href="https://github.com/iamsudip/dgplug"><b>dgplug</b></a> Various python chit-chat code.</li>
         <li><a href="https://github.com/kushaldas/pym"><b>Python for you and me book</b></a> (upstream contribution)</li>
         <li><a href="https://github.com/anurag619/music-ls"><b>music-ls</b></a> (upstream contribution)</li>
@@ -85,17 +85,6 @@
         <hr><ul>
         <li>Keen Interest in Web Development, Web scraping.</li>
         <li>Love to play Cricket</li>
-        </ul>
-       <h2><span id="declaration">Declaration</span></h2>
-        <hr><ul>
-        <li>I hereby declare that all the data and information provided above are true and correct to the best of my knowledge and I hold responsible myself for any irregularities, if found.
-        </li>
-        <li>Yours faithfully
-        </li>
-        <li>Sudip Maji
-        </li>
-        <li>Place: Durgapur (West Bengal)
-        </li>
         </ul>
        <h2><span id="references">References</span></h2>
         <hr><ul>
