--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
         <section id="downloads">
           <a href="https://github.com/iamsudip" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+        <section id="downloads">
           <a href="https://facebook.com/iamsudip13" class="btn btn-github"><span class="icon"></span>View on Facebook</a>
         </section>
       </div>
