--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
         <section id="downloads">
           <a href="https://github.com/iamsudip" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
-        <section id="downloads">
-          <a href="https://facebook.com/iamsudip13" class="btn btn-github"><span class="icon"></span>View on Facebook</a>
-        </section>
       </div>
     </header>
 
@@ -58,9 +55,9 @@
         <hr><ul>
         <p><li><b>Operating System:</b> GNU/Linux, Windows</p>
         </li>
-        <p><li><b>Programming Languages:</b> Python, Java, C, C++, HTML</p>
+        <p><li><b>Programming Languages:</b> Python, Java, C++, HTML</p>
         </li>
-        <p><li><b>Frameworks:</b> Python-flask</p>
+        <p><li><b>Frameworks:</b> Python-django</p>
         </li>
         <p><li><b>Version Control System:</b> Git</p>
         </li>
@@ -79,7 +76,7 @@
         <h2><span id="activities">Activities</span></h2>
         <hr><ul>
         <li>Local member <b>Durgapur Linux User's Group (dgplug).</b></li>
-        <li>Member of organizing team of <b>PYCON-MONTH workshop 2013</b> A hand on workshop on python.</li>
+        <li>Member of organizing team of <b>PYCON-MONTH workshop 2013</b> A hand on workshop on python in college.</li>
         </ul>
        <h2><span id="interests">Interests</span></h2>
         <hr><ul>
@@ -88,6 +85,8 @@
         </ul>
        <h2><span id="references">References</span></h2>
         <hr><ul>
+        <li>Kushal Das, Software Developer, kushaldas@gmail.com
+        </li>
         <li>Sayan Chowdhury, Lead Developer at HackerEarth, sayan@hackerearth.com
         </li>
       </section>
