--- a/index.html
+++ b/index.html
@@ -30,8 +30,6 @@
         <hr><ul>
         <li><b>e-mail</b> : <a href="mailto:iamsudip@programmer.net">iamsudip@programmer.net</a>
         </li>
-        <li><b>Blog</b> : <a href="http://iam-sudip.blogspot.in">http://iam-sudip.blogspot.in</a>
-        </li>
         <li><b>IRC nick</b> : iamsudip</li>
         </ul>
         <h2><span id="about-me">About Me</span></h2>
@@ -85,9 +83,9 @@
         </ul>
        <h2><span id="references">References</span></h2>
         <hr><ul>
-        <li>Kushal Das, Software Developer, kushaldas@gmail.com
+        <li><b>Kushal Das</b>, Software Developer, kushaldas@gmail.com
         </li>
-        <li>Sayan Chowdhury, Lead Developer at HackerEarth, sayan@hackerearth.com
+        <li><b>Sayan Chowdhury</b>, Lead Developer at HackerEarth, sayan@hackerearth.com
         </li>
       </section>
     </div>
