--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </ul>
        <h2><span id="references">References</span></h2>
         <hr><ul>
-        <li><b>Kushal Das</b>, Software Developer, kushaldas@gmail.com
+        <li><b>Kushal Das</b>, FOSS Developer, kushaldas@gmail.com
         </li>
         <li><b>Sayan Chowdhury</b>, Lead Developer at HackerEarth, sayan@hackerearth.com
         </li>
