--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <hr><ul>
         <li><b>Dr. B.C.Roy Engineering College, Durgapur</b>
           <p>B.Tech in Computer Science and Technology, Present</p>
-          <p>CGPA 7.44/10 [Till 4th Semester]</p>
+          <p>CGPA 7.57/10 [Till 5th Semester]</p>
         </li>
         <li><b>Durgapur A. V. B. High School(H. S.)</b>
             <p>Secured 81.80% in Higher Secondary Examination, W. B. C. H. S. E, May 2011</p>
@@ -53,9 +53,9 @@
         <hr><ul>
         <p><li><b>Operating System:</b> GNU/Linux, Windows</p>
         </li>
-        <p><li><b>Programming Languages:</b> Python, Java, C++, HTML</p>
+        <p><li><b>Programming Languages:</b> Python(Proficient), Java(Basic), C++(Basic), C(Basic), HTML(Basic)</p>
         </li>
-        <p><li><b>Frameworks:</b> Python-django</p>
+        <p><li><b>Frameworks:</b> Python-django, Flask</p>
         </li>
         <p><li><b>Version Control System:</b> Git</p>
         </li>
@@ -67,9 +67,9 @@
         <li><a href="https://github.com/iamsudip/sysmon"><b>sysmon</b></a> A daemon system process info collector.</li>
         <li><a href="https://github.com/iamsudip/bdthankall"><b>bdthankall</b></a> Bulk Like and comment programmatically on facebook.</li>
         <li><a href="https://github.com/iamsudip/decaptcha"><b>CAPTCHas1</b></a> Flipkart.com captcha solver</li>
-        <li><a href="https://github.com/iamsudip/dgplug"><b>dgplug</b></a> Various python chit-chat code.</li>
-        <li><a href="https://github.com/kushaldas/pym"><b>Python for you and me book</b></a> (upstream contribution)</li>
-        <li><a href="https://github.com/anurag619/music-ls"><b>music-ls</b></a> (upstream contribution)</li>
+        <li><a href="https://github.com/hasgeek/hasjob"><b>hasgeek-hasjob</b></a> Linked validation extension. (upstream contribution)</li>
+        <li><a href="https://github.com/kushaldas/pym"><b>Python for you and me book</b></a> Fixed various rst formatting. (upstream contribution)</li>
+        <li><a href="https://github.com/hasgeek/baseframe"><b>hasgeek-baseframe</b></a> Added rel='nofollow' meta for older listings. (upstream contribution)</li>
         </ul>
         <h2><span id="activities">Activities</span></h2>
         <hr><ul>
