--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <section id="downloads">
           <a href="https://github.com/iamsudip" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
+        <section id="downloads">
+          <a href="https://bitbucket.org/iamsudip" class="btn btn-github"><span class="icon"></span>View on Bitbucket</a>
+        </section>
       </div>
     </header>
 
@@ -62,14 +65,13 @@
         </ul>
         <h2><span id="projects">Projects</span></h2>
         <hr><ul>
-        <li><a href="https://github.com/iamsudip/dgplug/tree/master/dup_images"><b>dup_images</b></a> Application to find duplicate image or any files in a directory tree.</li>
         <li><a href="https://github.com/iamsudip/pysub-dl"><b>pysub-dl</b></a> Command line tool to download movie subtitles from subscene - a subscene.com scrapper. </li>
         <li><a href="https://github.com/iamsudip/sysmon"><b>sysmon</b></a> A daemon system process info collector.</li>
         <li><a href="https://github.com/iamsudip/bdthankall"><b>bdthankall</b></a> Bulk Like and comment programmatically on facebook.</li>
         <li><a href="https://github.com/iamsudip/decaptcha"><b>CAPTCHas1</b></a> Flipkart.com captcha solver</li>
-        <li><a href="https://github.com/hasgeek/hasjob"><b>hasgeek-hasjob</b></a> Linked validation extension. (upstream contribution)</li>
+        <li><a href="https://github.com/hasgeek/hasjob"><b>hasgeek-hasjob</b></a> Link validation extension. (upstream contribution)</li>
         <li><a href="https://github.com/kushaldas/pym"><b>Python for you and me book</b></a> Fixed various rst formatting. (upstream contribution)</li>
-        <li><a href="https://github.com/hasgeek/baseframe"><b>hasgeek-baseframe</b></a> Added rel='nofollow' meta for older listings. (upstream contribution)</li>
+        <li><a href="https://github.com/hasgeek/baseframe"><b>hasgeek-baseframe</b></a> Added nofollow meta for older listings. (upstream contribution)</li>
         </ul>
         <h2><span id="activities">Activities</span></h2>
         <hr><ul>
