--- a/index.html
+++ b/index.html
@@ -33,37 +33,27 @@
         </li>
         <li><b>IRC nick</b> : iamsudip</li>
         </ul>
-        <h2><span id="about-me">About Me</span></h2>
-        <hr>
-        <p>I am a Pythonista and an open source enthusiast. I love sharing softwares, source code, ideas everything so I love the world of "FOSS". I like to implement my knowledge and learn while working on an exciting opportunity on software design and development.</p>
-        </ul>
-        <h2><span id="education">Education</span></h2>
-        <hr><ul>
-        <li><b>Dr. B.C.Roy Engineering College, Durgapur</b>
-          <p>B.Tech in Computer Science and Technology, Present</p>
-          <p>CGPA 7.57/10 [Till 5th Semester]</p>
-        </li>
-        <li><b>Durgapur A. V. B. High School(H. S.)</b>
-            <p>Secured 81.80% in Higher Secondary Examination, W. B. C. H. S. E, May 2011</p>
-        
-        <li><b>Durgapur A. V. B. High School</b>
-          <p>Secured 85.75% in Madhyamik Pariksha, W. B. B. S. E, May 2009</p>
-        </li>
-        </ul>
         <h2><span id="technical-skills">Technical Skills</span></h2>
         <hr><ul>
         <p><li><b>Operating System:</b> GNU/Linux, Windows</p>
         </li>
         <p><li><b>Programming Languages:</b> Python(Proficient), Java(Basic), C++(Basic), C(Basic), HTML(Basic)</p>
         </li>
-        <p><li><b>Frameworks:</b> Python-django, Flask</p>
+        <p><li><b>Database Management Systems:</b> sqlite3, PostgreSQL</li></p>
+        <p><li><b>Frameworks:</b> Python-django, Flask, Twitter Bootstrap</p>
         </li>
+        <p><li><b>Development Tools:</b> Sublime Text 2</li></p>
         <p><li><b>Version Control System:</b> Git</p>
         </li>
         </ul>
+        <h2><span id="experience">Experience</span></h2>
+        <hr><ul>
+        <li><b>Summer Internship: </b><a href="http://vibeapp.co/">Profoundis Labs</a></li>
+        <p> Data mining from LinkedIn</p>
+        <p> Implemented centralized logging and monitoring system for distributed machines using Python, zmq, redis.</p></ul>
         <h2><span id="projects">Projects</span></h2>
         <hr><ul>
-        <li><a href="https://github.com/iamsudip/pysub-dl"><b>pysub-dl</b></a> Command line tool to download movie subtitles from subscene - a subscene.com scrapper. </li>
+        <li><a href="http://www.iamsudip.me/pysub-dl"><b>pysub-dl</b></a> Command line tool to download movie subtitles from subscene - a subscene.com scrapper. </li>
         <li><a href="https://github.com/iamsudip/sysmon"><b>sysmon</b></a> A daemon system process info collector.</li>
         <li><a href="https://github.com/iamsudip/bdthankall"><b>bdthankall</b></a> Bulk Like and comment programmatically on facebook.</li>
         <li><a href="https://github.com/iamsudip/decaptcha"><b>CAPTCHas1</b></a> Flipkart.com captcha solver</li>
