--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 
         <section id="downloads">
           <a href="https://github.com/iamsudip" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-          <a href="https://bitbucket.org/iamsudip" class="btn btn-github"><span class="icon"></span>View on Bitbucket</a>
+          <a href="https://bitbucket.org/iamsudip" class="btn btn-bitbucket"><span class="icon"></span>View on Bitbucket</a>
+          <a href="https://facebook.com/iamsudip13" class="btn btn-facebook"><span class="icon"></span>View on Facebook</a>
+          <a href="https://twitter.com/iamsudipy" class="btn btn-twitter"><span class="icon"></span>Follow on twitter</a>
         </section>
       </div>
     </header>
@@ -40,10 +42,11 @@
         <p> Implemented centralized logging and monitoring system for distributed machines using Python, zmq, redis.</p></ul>
         <h2><span id="projects">Projects</span></h2>
         <hr><ul>
-        <li><a href="http://www.iamsudip.me/pysub-dl"><b>pysub-dl</b></a> Command line tool to download movie subtitles from subscene - a subscene.com scrapper. </li>
-        <li><a href="https://github.com/iamsudip/sysmon"><b>sysmon</b></a> A daemon system process info collector.</li>
-        <li><a href="https://github.com/iamsudip/bdthankall"><b>bdthankall</b></a> Bulk Like and comment programmatically on facebook.</li>
-        <li><a href="https://github.com/iamsudip/decaptcha"><b>CAPTCHas1</b></a> Flipkart.com captcha solver</li>
+        <li><a href="./pysub-dl"><b>pysub-dl</b></a> Command line tool to download movie subtitles from subscene - a subscene.com scrapper. </li>
+        <li><a href="./sysmon"><b>sysmon</b></a> A daemon system process info collector.</li>
+        <li><a href="./bdthankall"><b>bdthankall</b></a> Bulk Like and comment programmatically on facebook.</li>
+        <li><a href="./decaptcha"><b>CAPTCHas1</b></a> Flipkart.com captcha solver</li>
+        <li><a href="./vid2mp3"><b>vid2mp3</b></a> Terminal tool to convert & download Video to mp3</li>
         <li><a href="https://github.com/hasgeek/hasjob"><b>hasgeek-hasjob</b></a> Link validation extension. (upstream contribution)</li>
         <li><a href="https://github.com/kushaldas/pym"><b>Python for you and me book</b></a> Fixed various rst formatting. (upstream contribution)</li>
         <li><a href="https://github.com/hasgeek/baseframe"><b>hasgeek-baseframe</b></a> Added nofollow meta for older listings. (upstream contribution)</li>
