--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
         <section id="downloads">
           <a href="https://github.com/iamsudip" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-          <a href="https://bitbucket.org/iamsudip"</span>View on Bitbucket</a>
-          <a href="https://facebook.com/iamsudip13"</span>View on Facebook</a>
-          <a href="https://twitter.com/iamsudipy"</span>Follow on twitter</a>
+          <a href="https://bitbucket.org/iamsudip" <span class="icon"></span>View on Bitbucket</a>
+          <a href="https://facebook.com/iamsudip13"<span class="icon"></span>View on Facebook</a>
+          <a href="https://twitter.com/iamsudipy"<span class="icon"></span>Follow on twitter</a>
         </section>
       </div>
     </header>
