--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <h2></h2>
 
         <section id="downloads">
-          <a href="https://github.com/iamsudip" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-          <a href="https://bitbucket.org/iamsudip" <span class="icon"></span>View on Bitbucket</a>
-          <a href="https://facebook.com/iamsudip13"<span class="icon"></span>View on Facebook</a>
-          <a href="https://twitter.com/iamsudipy"<span class="icon"></span>Follow on twitter</a>
+          <a href="https://github.com/iamsudip" class="btn btn-github"><span class="icon"></span>GitHub</a>
+          <a href="https://bitbucket.org/iamsudip" class="btn btn-github"><span class="icon"></span>Bitbucket</a>
+          <a href="https://facebook.com/iamsudip13" class="btn btn-github"><span class="icon"></span>Facebook</a>
+          <a href="https://twitter.com/iamsudipy"class="btn btn-github"><span class="icon"></span>Twitter</a>
         </section>
       </div>
     </header>
