Added facebook twitter

--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@
 						<li><a href="https://www.facebook.com/iamsudip13" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="https://github.com/iamsudip" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://bitbucket.org/iamsudip" class="icon fa-bitbucket"><span class="label">Bitbucket</span></a></li>
+						<li><a href="https://twitter.com/iamsudipy" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.facebook.com/iamsudip13" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 					</ul>
 			
 			</footer>
