--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content container 75%">
 					<header>
-						<h2>Hello.</h2>
+						<h2>Hello, World!</h2>
 					</header>
-					<p>Welcome!</p>
 					<p>I am <strong>Sudip Maji</strong>, a <strong>Python enthusiast</strong> and <strong>Programmer</strong>.
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
@@ -149,8 +148,6 @@
 						<li><a href="https://www.facebook.com/iamsudip13" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="https://github.com/iamsudip" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://bitbucket.org/iamsudip" class="icon fa-bitbucket"><span class="label">Bitbucket</span></a></li>
-						<li><a href="https://twitter.com/iamsudipy" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.facebook.com/iamsudip13" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 					</ul>
 			
 			</footer>
