--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 								<div class="row">
 									<div class="12u">
 										<ul class="actions">
-											<li><input type="submit" value="Send Message" onclick="ButtonClicked()" /></li>
+											<li><input type="submit" value="Send Message" onclick="MessageSent()" /></li>
 										</ul>
 									</div>
 								</div>
@@ -146,7 +146,7 @@
 					<div class="row">
 						<div class="12u">
 							<ul class="actions">
-								<li><input type="submit" value="Send Another Message" onclick="RestoreSubmitButton()" /></li>
+								<li><input type="button" value="Send Another Message" onclick="RestoreMessageForm()" /></li>
 							</ul>
 						</div>
 					</div>
@@ -167,13 +167,13 @@
 			</footer>
 
 			<script type="text/javascript">
-				function ButtonClicked()
+				function MessageSent()
 				{
 				   document.getElementById("form").style.display = "none"; // to undisplay
 				   document.getElementById("after_message").style.display = ""; // to display
 				   return true;
 				}
-				function RestoreSubmitButton()
+				function RestoreMessageForm()
 				{
 				   document.getElementById("form").style.display = ""; // to display
 				   document.getElementById("after_message").style.display = "none"; // to display
