--- a/index.html
+++ b/index.html
@@ -86,38 +86,43 @@
 					</header>
 					
 					<!-- Lightbox Gallery  -->
-						<div class="container 75% gallery">
-							<div class="row 0% images">
+<!-- 						<div class="container 75% gallery">
+							<div class="row 0%">
 								<div class="6u"><a href="images/fulls/01.jpg" class="image fit from-left"><img src="images/thumbs/01.jpg" title="Pysub-dl: Terminal movie subtitle downloader" alt="" /><strong>Pysub-dl</strong></a></div>
 								<div class="6u"><a href="images/fulls/02.jpg" class="image fit from-right"><img src="images/thumbs/02.jpg" title="Vid2mp3: Terminal Online video to mp3 downloader" alt="" /><strong>Vid2mp3</strong></a></div>
 							</div>
-							<div class="row 0% images">
+							<div class="row 0%">
 								<div class="6u"><a href="images/fulls/03.jpg" class="image fit from-left"><img src="images/thumbs/03.jpg" title="Deacptcha - Flipkart.com's captcha cracker" alt="" /><strong>Deacptcha</strong></a></div>
 								<div class="6u"><a href="images/fulls/04.jpg" class="image fit from-right"><img src="images/thumbs/04.jpg" title="Bdthankall: Thank all your Facebook friend in one go!" alt="" /><strong>Bdthankall</strong></a></div>
 							</div>
-							<div class="row 0% images">
+							<div class="row 0%">
 								<div class="6u"><a href="images/fulls/05.jpg" class="image fit from-left"><img src="images/thumbs/05.jpg" title="Upstream contribution: Hasgeek Job board" alt="" /><strong>Hasgeek-hasjob</strong></a></div>
 								<div class="6u"><a href="images/fulls/06.jpg" class="image fit from-right"><img src="images/thumbs/06.jpg" title="Conversed: Find details about anyone via their email address" alt="" /><strong>Conversed</strong></a></div>
 							</div>
-							<div class="row 0% images">
+							<div class="row 0%">
 								<div class="6u"><a href="images/fulls/05.jpg" class="image fit from-left"><img src="images/thumbs/05.jpg" title="Upstream Contribution: pymbook" alt="" /><strong>Python for you and me - Book</strong></a></div>
 								<div class="6u"><a href="images/fulls/06.jpg" class="image fit from-right"><img src="images/thumbs/06.jpg" title="Upstream Contribution: Hasgeek Baseframe" alt="" /><strong>hasgeek-baseframe</strong></a></div>
 							</div>
-						</div>
+						</div> -->
 
 				</div>
 			</section>
 			
 		<!-- Contact -->
 			<section id="contact" class="main style3 secondary">
-				<div class="content container" id="form">
+				<div class="content container" >
+					<header>
+						<h2>Say Hello.</h2>
+						<p>Shoot me an email: iamsudip[at]programmer[dot]net</p>
+					</header>
+				</div>
+<!-- 				<div class="content container" id="form">
 					<header>
 						<h2>Say Hello.</h2>
 						<p>Shoot me an email to: iamsudip[at]programmer[dot]net or you can use this form (not ready yet) to contact me.</p>
 					</header>
 					<div class="content container 75%">
 					
-					<!-- Contact Form -->
 							<form method="post" action="." target="uploader_iframe">
 								<div class="row 50%">
 									<div class="6u"><input type="text" name="name" placeholder="Name" /></div>
@@ -150,7 +155,7 @@
 							</ul>
 						</div>
 					</div>
-				</div>
+				</div> -->
 			</section>
 			
 		<!-- Footer -->
