--- a/index.html
+++ b/index.html
@@ -28,36 +28,80 @@
       </header>
       <section>
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="personal-information" class="anchor" href="#personal-information" aria-hidden="true"><span class="octicon octicon-link"></span></a>Personal Information</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p><strong>Name:</strong> Sudip Maji</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<p><strong>IRC nick:</strong> iamsudip</p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p><strong>email:</strong> <a href="mailto:iamsudip@programmer.net">iamsudip@programmer.net</a></p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="about-me" class="anchor" href="#about-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>About Me</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>I am software developer who is in love with Python. Being a lazy person I try to automate everything which makes life easy using Python. When I am not coding, I can be found playing cricket or playing Age of empires.  </p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="experience" class="anchor" href="#experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Experience</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p><strong>Software Developer Intern at <a href="https://www.hackerearth.com/">HackerEarth</a>, January 2015 - Present</strong></p>
+
+<ul>
+<li><p>Buliding <strong><a href="https://www.hackerearth.com/docs/api/challenges/">HackerEarth Leaderboard API</a></strong> for HackerEarth Coding challenges and previously created <strong><a href="https://www.hackerearth.com/docs/api/recruiter/">HackerEarth Recruiters API</a></strong> using Python/Django, Django-tastypie</p></li>
+<li><p>Built a documentation infrastructure for HackerEarth</p></li>
+<li><p>Integrated Google-nocaptcha with HackerEarth login</p></li>
+<li><p>Worked with team on building new version of HackerEarth Interview panel</p></li>
+</ul>
+
+<p><strong>Intern at <a href="http://www.profoundis.com">Profoundis Labs</a>, June 2014</strong></p>
+
+<ul>
+<li><p>Built a centralized logging system for distributed machines using Python, zero-MQ, Sqlite etc.</p></li>
+<li><p>Wrote crawlers for various web services</p></li>
+</ul>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="projects" class="anchor" href="#projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p><strong><a href="http://conversedme-iamsudip.rhcloud.com/">Conversed</a></strong>: Find the person behind an email address.</p>
+
+<p><strong><a href="https://pypi.python.org/pypi/pysub-dl/">pysub-dl</a></strong>: Terminal tool to download movie subtitles</p>
+
+<p><strong><a href="https://pypi.python.org/pypi/vid2mp3/">vid2mp3</a></strong>: Terminal tool to download Youtube videos as mp3.</p>
+
+<p><strong><a href="https://readthedocs.org/projects/pymbook/">pymbook</a></strong>: Python book by Kushal Das. (Upstream Contribution)</p>
+
+<p><strong><a href="https://hasjob.co/">Hasgeek-hasjob</a></strong>: Hasgeek Job board. (Upstream Contribution)</p>
+
+<p><strong><a href="https://github.com/hasgeek/baseframe">Hasgeek-baseframe</a></strong>: Baseframe for HasGeek projects. (Upstream Contribution)</p>
+
+<h3>
+<a id="education" class="anchor" href="#education" aria-hidden="true"><span class="octicon octicon-link"></span></a>Education</h3>
+
+<p><strong>Dr. B. C. Roy Engineering College, Durgapur</strong></p>
+
+<ul>
+<li>B.Tech in Computer Science and Technology, June 2015 (Expected)</li>
+</ul>
+
+<p><strong>Durgapur A. V. B. High School (H. S.), Durgapur</strong></p>
+
+<ul>
+<li>Higher Secondary, W. B. C. H. S. E, 2009 - 2011</li>
+</ul>
+
+<p><strong>Durgapur A. V. B. High School, Durgapur</strong></p>
+
+<ul>
+<li>Secondary, W. B. B. S. E, 2005 - 2011</li>
+</ul>
+
+<h3>
+<a id="references" class="anchor" href="#references" aria-hidden="true"><span class="octicon octicon-link"></span></a>References</h3>
+
+<p><strong>Kushal Das</strong>, CPython core developer at PSF, <a href="mailto:kushaldas@gmail.com">kushaldas@gmail.com</a></p>
+
+<p><strong>Ratnadeep Debnath</strong>, Software Engineer at ibibo Web Pvt. Ltd., <a href="mailto:rtnpro@gmail.com">rtnpro@gmail.com</a></p>
       </section>
       <footer>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
