--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>./iamsudip by iamsudip</title>
+    <title>./iamsudip</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -18,11 +18,23 @@
       <header>
         <h1 class="header">./iamsudip</h1>
         <p class="header">Software Developer</p>
-
-
-
         <ul>
           <li><a class="buttons github" href="https://github.com/iamsudip">GitHub Profile</a></li>
+        </ul>
+        <ul>
+          <li><a class="buttons bitbucket" href="https://bitbucket.org/iamsudip">Bitbucket Profile</a></li>
+        </ul>
+        <ul>
+          <li><a class="buttons linkedin" href="https://in.linkedin.com/in/iamsudipy">Linkedin Profile</a></li>
+        </ul>
+        <ul>
+          <li><a class="buttons facebook" href="https://facebook.com/iamsudip13">Facebook Profile</a></li>
+        </ul>
+        <ul>
+          <li><a class="buttons twitter" href="https://twitter.com/iamsudipy">@iamsudipy</a></li>
+        </ul>
+        <ul>
+          <li><a class="buttons quora" href="http://www.quora.com/Sudip-Maji-2">Quora Profile</a></li>
         </ul>
 
       </header>
@@ -39,7 +51,7 @@
 <h3>
 <a id="about-me" class="anchor" href="#about-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>About Me</h3>
 
-<p>I am software developer who is in love with Python. Being a lazy person I try to automate everything which makes life easy using Python. When I am not coding, I can be found playing cricket or playing Age of empires.  </p>
+<p>I am software developer who is in love with Python. Being a lazy person I try to automate everything which makes life easy. When I am not coding, I can be found playing cricket or playing Age of empires.  </p>
 
 <h3>
 <a id="experience" class="anchor" href="#experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Experience</h3>
@@ -103,9 +115,6 @@
 
 <p><strong>Ratnadeep Debnath</strong>, Software Engineer at ibibo Web Pvt. Ltd., <a href="mailto:rtnpro@gmail.com">rtnpro@gmail.com</a></p>
       </section>
-      <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-      </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
 		
