--- a/index.html
+++ b/index.html
@@ -42,12 +42,13 @@
         <h3>
 <a id="personal-information" class="anchor" href="#personal-information" aria-hidden="true"><span class="octicon octicon-link"></span></a>Personal Information</h3>
 
-<p><strong>Name:</strong> Sudip Maji</p>
+<div class="personal">
+  <p><strong>Name:</strong> Sudip Maji</p>
 
-<p><strong>IRC nick:</strong> iamsudip</p>
+  <p><strong>IRC nick:</strong> iamsudip</p>
 
-<p><strong>email:</strong> <a href="mailto:iamsudip@programmer.net">iamsudip@programmer.net</a></p>
-
+  <p><strong>email:</strong> <a href="mailto:iamsudip@programmer.net">iamsudip@programmer.net</a></p>
+</div>
 <h3>
 <a id="about-me" class="anchor" href="#about-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>About Me</h3>
 
@@ -105,7 +106,7 @@
 <p><strong>Durgapur A. V. B. High School, Durgapur</strong></p>
 
 <ul>
-<li>Secondary, W. B. B. S. E, 2005 - 2011</li>
+<li>Secondary, W. B. B. S. E, 2009 - 2011</li>
 </ul>
 
 <h3>
