--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <li><a class="buttons facebook" href="https://facebook.com/iamsudip13">Facebook Profile</a></li>
         </ul>
         <ul>
-          <li><a class="buttons twitter" href="https://twitter.com/iamsudipy">@iamsudipy</a></li>
+          <li><a class="buttons twitter" href="https://twitter.com/iamsudipy">Twitter Profile</a></li>
         </ul>
         <ul>
           <li><a class="buttons quora" href="http://www.quora.com/Sudip-Maji-2">Quora Profile</a></li>
@@ -106,7 +106,7 @@
 <p><strong>Durgapur A. V. B. High School, Durgapur</strong></p>
 
 <ul>
-<li>Secondary, W. B. B. S. E, 2009 - 2011</li>
+<li>Secondary, W. B. B. S. E, 2007 - 2009</li>
 </ul>
 
 <h3>
