set target blank

--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
         <h1 class="header">./iamsudip</h1>
         <p class="header">Software Developer</p>
         <ul>
-          <li><a class="buttons github" href="https://github.com/iamsudip">GitHub Profile</a></li>
+          <li><a class="buttons github" href="https://github.com/iamsudip" target="_blank">GitHub Profile</a></li>
         </ul>
         <ul>
-          <li><a class="buttons bitbucket" href="https://bitbucket.org/iamsudip">Bitbucket Profile</a></li>
+          <li><a class="buttons bitbucket" href="https://bitbucket.org/iamsudip" target="_blank">Bitbucket Profile</a></li>
         </ul>
         <ul>
-          <li><a class="buttons linkedin" href="https://in.linkedin.com/in/iamsudipy">Linkedin Profile</a></li>
+          <li><a class="buttons linkedin" href="https://in.linkedin.com/in/iamsudipy" target="_blank">Linkedin Profile</a></li>
         </ul>
         <ul>
-          <li><a class="buttons facebook" href="https://facebook.com/iamsudip13">Facebook Profile</a></li>
+          <li><a class="buttons facebook" href="https://facebook.com/iamsudip13" target="_blank">Facebook Profile</a></li>
         </ul>
         <ul>
-          <li><a class="buttons twitter" href="https://twitter.com/iamsudipy">Twitter Profile</a></li>
+          <li><a class="buttons twitter" href="https://twitter.com/iamsudipy" target="_blank">Twitter Profile</a></li>
         </ul>
         <ul>
-          <li><a class="buttons quora" href="http://www.quora.com/Sudip-Maji-2">Quora Profile</a></li>
+          <li><a class="buttons quora" href="http://www.quora.com/Sudip-Maji-2" target="_blank">Quora Profile</a></li>
         </ul>
 
       </header>
@@ -57,16 +57,16 @@
 <h3>
 <a id="experience" class="anchor" href="#experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Experience</h3>
 
-<p><strong>Software Developer Intern at <a href="https://www.hackerearth.com/">HackerEarth</a>, January 2015 - Present</strong></p>
+<p><strong>Software Developer Intern at <a href="https://www.hackerearth.com/" target="_blank">HackerEarth</a>, January 2015 - Present</strong></p>
 
 <ul>
-<li><p>Buliding <strong><a href="https://www.hackerearth.com/docs/api/challenges/">HackerEarth Leaderboard API</a></strong> for HackerEarth Coding challenges and previously created <strong><a href="https://www.hackerearth.com/docs/api/recruiter/">HackerEarth Recruiters API</a></strong> using Python/Django, Django-tastypie</p></li>
+<li><p>Buliding <strong><a href="https://www.hackerearth.com/docs/api/challenges/" target="_blank">HackerEarth Leaderboard API</a></strong> for HackerEarth Coding challenges and previously created <strong><a href="https://www.hackerearth.com/docs/api/recruiter/" target="_blank">HackerEarth Recruiters API</a></strong> using Python/Django, Django-tastypie</p></li>
 <li><p>Built a documentation infrastructure for HackerEarth</p></li>
 <li><p>Integrated Google-nocaptcha with HackerEarth login</p></li>
 <li><p>Worked with team on building new version of HackerEarth Interview panel</p></li>
 </ul>
 
-<p><strong>Intern at <a href="http://www.profoundis.com">Profoundis Labs</a>, June 2014</strong></p>
+<p><strong>Intern at <a href="http://www.profoundis.com" target="_blank">Profoundis Labs</a>, June 2014</strong></p>
 
 <ul>
 <li><p>Built a centralized logging system for distributed machines using Python, zero-MQ, Sqlite etc.</p></li>
@@ -76,17 +76,17 @@
 <h3>
 <a id="projects" class="anchor" href="#projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects</h3>
 
-<p><strong><a href="http://conversedme-iamsudip.rhcloud.com/">Conversed</a></strong>: Find the person behind an email address.</p>
+<p><strong><a href="http://conversed.iamsudip.me/" target="_blank">Conversed</a></strong>: Find the person behind an email address.</p>
 
-<p><strong><a href="https://pypi.python.org/pypi/pysub-dl/">pysub-dl</a></strong>: Terminal tool to download movie subtitles</p>
+<p><strong><a href="https://pypi.python.org/pypi/pysub-dl/" target="_blank">pysub-dl</a></strong>: Terminal tool to download movie subtitles</p>
 
-<p><strong><a href="https://pypi.python.org/pypi/vid2mp3/">vid2mp3</a></strong>: Terminal tool to download Youtube videos as mp3.</p>
+<p><strong><a href="https://pypi.python.org/pypi/vid2mp3/" target="_blank">vid2mp3</a></strong>: Terminal tool to download Youtube videos as mp3.</p>
 
-<p><strong><a href="https://readthedocs.org/projects/pymbook/">pymbook</a></strong>: Python book by Kushal Das. (Upstream Contribution)</p>
+<p><strong><a href="https://readthedocs.org/projects/pymbook/" target="_blank">pymbook</a></strong>: Python book by Kushal Das. (Upstream Contribution)</p>
 
-<p><strong><a href="https://hasjob.co/">Hasgeek-hasjob</a></strong>: Hasgeek Job board. (Upstream Contribution)</p>
+<p><strong><a href="https://hasjob.co/" target="_blank">Hasgeek-hasjob</a></strong>: Hasgeek Job board. (Upstream Contribution)</p>
 
-<p><strong><a href="https://github.com/hasgeek/baseframe">Hasgeek-baseframe</a></strong>: Baseframe for HasGeek projects. (Upstream Contribution)</p>
+<p><strong><a href="https://github.com/hasgeek/baseframe" target="_blank">Hasgeek-baseframe</a></strong>: Baseframe for HasGeek projects. (Upstream Contribution)</p>
 
 <h3>
 <a id="education" class="anchor" href="#education" aria-hidden="true"><span class="octicon octicon-link"></span></a>Education</h3>
