Add Savetheinternet banner

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <h3>
 <a id="about-me" class="anchor" href="#about-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>About Me</h3>
 
-<p>I am software developer who is in love with Python. Being a lazy person I try to automate everything which makes life easy. When I am not coding, I can be found playing cricket or playing Age of empires.  </p>
+<p>I am a software developer who is in love with Python. Being a lazy person I try to automate everything which makes life easy. When I am not coding, I can be found playing cricket or playing Age of empires.  </p>
 
 <h3>
 <a id="experience" class="anchor" href="#experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Experience</h3>
@@ -116,6 +116,9 @@
 
 <p><strong>Ratnadeep Debnath</strong>, Software Engineer at ibibo Web Pvt. Ltd., <a href="mailto:rtnpro@gmail.com">rtnpro@gmail.com</a></p>
       </section>
+    <footer>
+        <a href="http://www.netneutrality.in/" target="_blank"><img src="images/sti.jpg"></a>
+    </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
 		
