--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <h3>
 <a id="references" class="anchor" href="#references" aria-hidden="true"><span class="octicon octicon-link"></span></a>References</h3>
 
-<p><strong>Kushal Das</strong>, CPython core developer at PSF, <a href="mailto:kushaldas@gmail.com">kushaldas@gmail.com</a></p>
+<p><strong>Kushal Das</strong>, CPython Core Developer, <a href="mailto:kushaldas@gmail.com">kushaldas@gmail.com</a></p>
 
 <p><strong>Ratnadeep Debnath</strong>, Member of Technical Stuff at Idea Device Technologies, <a href="mailto:rtnpro@gmail.com">rtnpro@gmail.com</a></p>
       </section>
