--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <h3>
 <a id="experience" class="anchor" href="#experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Experience</h3>
 
-<p><strong>Software Developer Intern at <a href="https://www.hackerearth.com/" target="_blank">HackerEarth</a>, January 2015 - Present</strong></p>
+<p><strong>Software Developer at <a href="https://www.hackerearth.com/" target="_blank">HackerEarth</a>, January 2015 - Present</strong></p>
 
 <ul>
 <li><p>Buliding <strong><a href="https://www.hackerearth.com/docs/api/challenges/" target="_blank">HackerEarth Leaderboard API</a></strong> for HackerEarth Coding challenges and previously created <strong><a href="https://www.hackerearth.com/docs/api/recruiter/" target="_blank">HackerEarth Recruiters API</a></strong> using Python/Django, Django-tastypie</p></li>
