--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <p><strong>Dr. B. C. Roy Engineering College, Durgapur</strong></p>
 
 <ul>
-<li>B.Tech in Computer Science and Technology, June 2015 (Expected)</li>
+<li>B.Tech in Computer Science and Technology, 2011 - 2015</li>
 </ul>
 
 <p><strong>Durgapur A. V. B. High School (H. S.), Durgapur</strong></p>
