--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <h3>
 <a id="projects" class="anchor" href="#projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects</h3>
 
-<p><strong><a href="http://conversed.iamsudip.xyz/" target="_blank">Conversed</a></strong>: Find the person behind an email address.</p>
+<p><strong><a href="http://conversed.sudip.xyz/" target="_blank">Conversed</a></strong>: Find the person behind an email address.</p>
 
 <p><strong><a href="https://pypi.python.org/pypi/pysub-dl/" target="_blank">pysub-dl</a></strong>: Terminal tool to download movie subtitles</p>
 
